Fixed Twitter link on mobile

--- a/assets/styles/general.less
+++ b/assets/styles/general.less
@@ -37,3 +37,7 @@ p.item-pills {
     list-style-position: inside;
   }
 }
+
+ul.top-menu-right {
+  flex-direction: row;
+}
